fix(media responsive): fix back to top position on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1345,4 +1345,9 @@ button:focus-visible {
     .contact-card {
         padding: 40px 24px;
     }
+
+    #back-to-top {
+        bottom: 84px;
+        left: 16px;
+    }
 }
